WEBSITE-2852 - UI issue logging-in mobile entrypage on ios device.

--- a/assets/sass/base/_default.scss
+++ b/assets/sass/base/_default.scss
@@ -39,13 +39,6 @@ body {
     }
 }
 
-@supports (padding-top: env(safe-area-inset-top)) {
-  body {
-    --safe-area-inset-top: env(safe-area-inset-top);
-    height: calc(100% + var(--safe-area-inset-top));
-  }
-}
-
 // Links
 a {
     transition: color 0.3s, background-color 0.3s;
